about me, interests page getting there

--- a/index.html
+++ b/index.html
@@ -79,27 +79,70 @@
     <div class="right">
         <p class = "bold section-title">My Interests</p>
         <ul class="collection" id="staggered-list">
-            <li class="collection-item avatar valign-wrapper">
-                <img src="soccer.png" class="hide-on-small-only" alt="" class="circle">
-                <span class="title flow-text valign">Soccer</span>
-                <p>Captain - Colby Men's Soccer (2015)</p>
+            <li class="collection-item avatar">
+                <div class="container">
+                    <div class="row" style="margin-bottom:auto;">
+                        <div class="col s2">
+                            <img src="soccer.png" class="hide-on-small-only" style="margin-top:10px;">
+                        </div>
+                        <div class="col s8 offset-s2">
+                            <span class="title flow-text valign techfont bold">Soccer</span>
+                            <p>Captain - Colby Men's Soccer (2015)</p>
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li class="collection-item avatar">
+                <div class="container">
+                    <div class="row" style="margin-bottom:auto;">
+                        <div class="col s2">
+                            <img src="stuGov2.png" class="hide-on-small-only" style="margin-top:10px;">
+                        </div>
+                        <div class="col s8 offset-s2">
+                            <span class="title flow-text valign techfont bold">Student Government</span>
+                            <p>President - Colby Class of 2016</p>
+                        </div>
+                    </div>
+                </div>
             </li>
             <li class="collection-item avatar valign-wrapper">
-                <img src="stuGov2.png" class="hide-on-small-only" alt="" class="circle">
-                <span class="title flow-text valign" style="font-size:18px">Student Government</span>
-                <p>President - Colby Class of 2016 (2014)</p>
+                <div class="container">
+                    <div class="row" style="margin-bottom:auto;">
+                        <div class="col s2">
+                            <img src="chess.png" class="hide-on-small-only" style="margin-top:10px;">
+                        </div>
+                        <div class="col s8 offset-s2">
+                            <span class="title flow-text valign techfont bold">Chess</span>
+                            <p>South Shore Interscholastic Chess League - 2nd Place</p>
+                        </div>
+                    </div>
+                </div>
             </li>
             <li class="collection-item avatar valign-wrapper">
-                <img src="chess.png" class="hide-on-small-only" alt="">
-                <span class="title flow-text">Chess</span>
+                <div class="container">
+                    <div class="row" style="margin-bottom:auto;">
+                        <div class="col s2">
+                            <img src="pottery.png" class="hide-on-small-only" style="margin-top:10px;">
+                        </div>
+                        <div class="col s8 offset-s2">
+                            <span class="title flow-text valign techfont bold">Pottery</span>
+                            <p>Colby Pottery Club</p>
+                        </div>
+                    </div>
+                </div>
             </li>
             <li class="collection-item avatar valign-wrapper">
-                <img src="pottery.png" class="hide-on-small-only" alt="">
-                <span class="title flow-text">Pottery</span>
-            </li>
-            <li class="collection-item avatar valign-wrapper">
-                <img src="mario.png" class="hide-on-small-only" alt="">
-                <span class="title">Mario Kart</span>
+                <div class="container">
+                    <div class="row" style="margin-bottom:auto;">
+                        <div class="col s2">
+                            <img src="mario.png" class="hide-on-small-only" style="margin-top:10px;">
+                        </div>
+                        <div class="col s8 offset-s2">
+                            <span class="title flow-text valign techfont bold">Mario Kart</span>
+                            <p>Multi-Time Mushroom Cup Champion</p>
+                        </div>
+                    </div>
+                </div>
             </li>
         </ul>    
     </div>
