basic site close, not responsive yet

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
                     <h2 class="center-align"><span class="flow-text white-text techfont">Aspiring trophy husband.</span></h2>
                 </div>
             </div>
+        </div>
+        <div style="text-align:center;">
+            <a href="Dan_Vog_Resume.pdf" target="_blank"><button type="submit" class="category-button">Resume</button></a>
+        </div>
             <!--Note: these are not aligning and it's ticking me off-->
             <!--commenting out, for now
             <div class="container" style="padding-top:80px">
@@ -173,6 +177,7 @@
     <div class = "outer">
         <p class="bold section-title white-text">Education</p>
         <div class="container section scrollspy" id="education">
+
             <div class="row school valign-wrapper">
                 <div class="col l1">
                     <img src="trinitySeal.png" class="circle valign" height="75" width="75">
@@ -194,6 +199,7 @@
                     <p class="bold white-text">Colby College</p>
                     <p class="techfont white-text">Waterville, ME</p>
                     <p class="techfont white-text">2012-2016</p>
+                    <p class="techfont white-text">B.A. - Computer Science/Mathematical Scienc
                 </div>
                 <div class="col l8 m7 offset-m1">
                     <p class = "techfont white-text hide-on-small-only">
@@ -209,6 +215,7 @@
                     <p class="bold white-text">Noble and Greenough</p>
                     <p class="techfont white-text">Dedham, MA</p>
                     <p class="techfont white-text">2008-2012</p>
+                    <p class="techfont white-text">Diploma</p>
                 </div>
                 <div class="col l8 m7 offset-m1">
                     <p class = "techfont white-text hide-on-small-only">What I did at Nobles</p>
@@ -217,56 +224,66 @@
         </div>
     </div>
     <div class = "block white section scrollspy" id="professional_experience">
-        <div class = "outer">
+        <div class = "container">
             <p class="bold section-title">Professional Experience</p>
-            <div class="experience_block">
-                <div class="experience">
-                    <div class="experience_info">
+                <div class="row">
+                    <div class="col l2 m4">
                         <p class="bold">Capital One</p>
                         <p class="techfont">McLean, VA</p>
                         <p class="techfont">Summer 2015</p>
+                        <img src="capOneTech.jpeg" height="75" width="75" class="circle hide-on-med-and-down" style="margin:auto"/>
                     </div>
-                    <div class="experience_description">
+                    <div class="col l4 m8" style="border-right:1px solid black">
                         <p class="bold">Software Engineering Intern</p>
-                        <p class="techfont">TBD</p>
+                        <ul class="collection hide-on-med-and-down">
+                            <li class="collection-item no-pad">Develop and package DASH agile reporting tool, to be deployed to open-source community at end of internship.</li>
+                            <li class="collection-item no-pad">Implement security alerts in Capital One&#39s Digital Wallet app with the Apple Pay integration team.</li>  
+                            <li class="collection-item no-pad">Provision new cloud-based Development environments running on Amazon Web Services with CloudOps team.</li>
+                        </ul>
                     </div>
-                </div>
-                <div class="experience">
-                    <div class="experience_info">
-                        <p class="bold">Colby College</p>
-                        <p class="techfont">Waterville, ME</p>
-                        <p class="techfont">Spring 2014-Present</p>
-                    </div>
-                    <div class="experience_description">
-                        <p class="bold">Teaching Assistant - Colby CS Department</p>
-                        <p class="techfont">Shtuff</p>
-                    </div>
-                </div>
-            </div>
-            <div class="experience_block">
-                <div class="experience">
-                    <div class="experience_info">
+                    <div class="col l2 m4">
                         <p class="bold">Microsoft</p>
                         <p class="techfont">Dublin, Ireland</p>
                         <p class="techfont">Spring 2015</p>
+                        <img src="microsoftLogo.jpg" height="75" width="75" class="hide-on-med-and-down">
                     </div>
-                    <div class="experience_description">
+                    <div class="col l4 m8">
                         <p class="bold">Student-Client Programming Project</p>
-                        <p class="techfont">Shtuff</p>
+                        <ul class="collection hide-on-med-and-down">
+                            <li class="collection-item no-pad">Worked closely with Microsoft&#39s software engineers at the Microsoft Dublin campus to develop a web app for Microsoft&#39s Office App Store.</li>
+                            <li class="collection-item no-pad">Participated in weekly code and design reviews with Microsoft&#39s software engineers.</li>  
+                            <li class="collection-item no-pad">Published app to Microsoft Office Store at culmination. <a href="https://store.office.com/easy-excel-search-WA104379363.aspx?assetid=WA104379363&sourcecorrid=4f57d547-3d6a-4706-a84d-e269c510fc00&searchapppos=0" target="_blank">Check it out!</a>.</li>
+                        </ul>
                     </div>
                 </div>
-                <div class="experience">
-                    <div class="experience_info">
+                <div class="row">
+                    <div class="col l2">
+                        <p class="bold">Colby College</p>
+                        <p class="techfont">Waterville, ME</p>
+                        <p class="techfont">Spring 2014-Present</p>
+                        <img src="colby-seal.png" height="75" width="75" class="hide-on-med-and-down">
+                    </div>
+                    <div class="col l4">
+                        <p class="bold">Teaching Assistant - Colby CS Department</p>
+                        <ul class="collection hide-on-med-and-down">
+                            <li class="collection-item no-pad">Aid computer science students with their assignments during weekly office hours.</li>
+                            <li class="collection-item no-pad">Serve as a general resource for students taking computer science courses, inside and outside of the computer lab.</li>  
+                        </ul>
+                    </div>
+                    <div class="col l2">
                         <p class="bold">Unum</p>
                         <p class="techfont">Portland, ME</p>
                         <p class="techfont">Summer 2014</p>
+                        <img src="unumLogo.jpg" height="75" width="75" class="hide-on-med-and-down">
                     </div>
-                    <div class="experience_description">
+                    <div class="col l4">
                         <p class="bold">Software Developer Intern</p>
-                        <p class="techfont">Shtuff</p>
+                        <ul class="collection hide-on-med-and-down">
+                            <li class="collection-item no-pad">Automated several previously manual tasks including daily report analyses and monthly metric generation, saving my department roughly 5 hours per week.</li>
+                            <li class="collection-item no-pad">Participated in intern-wide Innovation Challenge, an intensive 6-week project in which interns work in teams to find a problem and devise a technical solution, presenting findings to C-Level Executives at culmination.</li>  
+                        </ul>
                     </div>
                 </div>
-            </div>
         </div>
     </div>
     <div class = "block blue section scrollspy" id="projects">
@@ -282,7 +299,7 @@
 $(document).ready(function(){
   $('.scrollspy').scrollSpy();
   $('.parallax').parallax();
-  var options=[{selector: '#staggered-list', offset: 0, callback: '$("#staggered-list").show(           500);Materialize.showStaggeredList("#staggered-list")'}, 
+  var options=[{selector: '#about_me', offset: 400, callback: '$("#staggered-list").show(           500);Materialize.showStaggeredList("#staggered-list")'}, 
   {selector: '#soccerShot', offset: 700, callback: 'Materialize.toast("Me playing a game of sports-ball. (I\'m on the right!)", 2500 )'}];
   Materialize.scrollFire(options);
   $(window).scroll(function() {
